# customer-chat

./: .gitignore  README.md  pyproject.toml
services/backend/: connection_manager.py  main.py
services/connector/: main.py
services/frontend/: customer_chat.html  support_chat.html
