[tool.poetry]
name = "customer-chat"
version = "0.1.0"
description = ""
authors = ["Manuel Eibl <manueleibl2@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
